Fix : Button alignment

--- a/src/Pages/Authentication/login-signup.css
+++ b/src/Pages/Authentication/login-signup.css
@@ -47,7 +47,7 @@
 
 .login__form--container .main--btn {
   font-size: 2rem;
-  /* margin: 5rem; */
+  margin: 0;
   width: 100%;
   margin-bottom: 1rem;
 }
